@@ -1,3 +1,7 @@
+2000-08-31  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Cleaning up Ireg constructors, working on 'fields'.
+
 2000-08-30  Jeff Freedman  <jeff@patches.simutech.com>
 
 	* Actually from Derek Liauw Kie Fa:  New 2X scaling code.
